src/test/deca/context/valid/others/cast_int_float.deca
// Description:
//    conversion de int en float et inversement
//
// Resultats:
//erreur
//
//
// Historique:
//    cree le 06/01/2025

{   
   float a = (float) 3;
   int b = (int) 3.0;
   }