src/test/deca/context/invalid/readint_float.deca
// Description:
//    Programme minimaliste utilisant read pour l'induire a une erreur.
//
// Resultats:
//erreur
//
// Historique:
//    cree le 06/01/2025

{   
   int x;
   x=readFloat();

}